elastic-kibana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibanadashbaord
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # reference production issuer
    cert-manager.io/issuer: "kibanadashboard-letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kibanadashbord.narasimhakubernetes.xyz
    # reference secret for production TLS certificate
    secretName: kibanadashboard-production-certificate
  rules:
   - host: kibanadashboard.narasimhakubernetes.xyz
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-logging
            port:
              number: 5601
